--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -29,5 +29,5 @@ FLIPPER_VERSION=0.99.0
 
 MYAPP_RELEASE_STORE_FILE=demo.keystore
 MYAPP_RELEASE_KEY_ALIAS=demo
-MYAPP_RELEASE_STORE_PASSWORD=demo*123#
-MYAPP_RELEASE_KEY_PASSWORD=demo*123#
+MYAPP_RELEASE_STORE_PASSWORD=demo*123
+MYAPP_RELEASE_KEY_PASSWORD=demo*123
