--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,4 +35,9 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
     }
+    configurations.matching { it.name == '_internal_aapt2_binary' }.all { config ->
+        config.resolutionStrategy.eachDependency { details ->
+            details.useVersion("3.5.0-alpha03-5252756")
+        }
+    }
 }
