--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'newProject' do
     :hermes_enabled => false
   )
 
+  pod 'appcenter-core', :path => '../node_modules/appcenter'
+
   target 'newProjectTests' do
     inherit! :complete
     # Pods for testing
